--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/Tests.cpython-310-pytest-7.3.0.pyc
 test.py
 __pycache__/LinkedList.cpython-311.pyc
 __pycache__/Tests.cpython-311-pytest-7.3.0.pyc
+__pycache__/1LinkList.cpython-310.pyc
