sorts done, roughly added profiler (cProfile)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ test.py
 __pycache__/LinkedList.cpython-311.pyc
 __pycache__/Tests.cpython-311-pytest-7.3.0.pyc
 __pycache__/1LinkList.cpython-310.pyc
+__pycache__/sorts.cpython-311.pyc
